--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ name                     : "mibook"
 description              : "Making Interactivity Greek Book."
 url                      : "https://www.mibook.org"
 baseurl                  : ""
-repository               : "mibook/gr"
+repository               : "geosideras/gr"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -65,7 +65,7 @@ author:
   location         :
   email            :
   uri              :
-  home             : "http://mibook.org/gr"
+  home             : "https://geosideras.github.io/gr"
   bitbucket        :
   codepen          :
   dribbble         :
