--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "mibook"
+  github           : "geosideras"
   gitlab           :
   google_plus      :
   keybase          :
